@@ -13,14 +13,13 @@ AM_INIT_AUTOMAKE(gwenhywfar, 0.9.4rc3)
 AC_CONFIG_SRCDIR([src/gwenhywfarapi.h])
 AC_CONFIG_HEADER([config.h])
 
-
 #
 # versions
 #
 GWENHYWFAR_VERSION_MAJOR=0
 GWENHYWFAR_VERSION_MINOR=9
 GWENHYWFAR_VERSION_PATCHLEVEL=4
-GWENHYWFAR_VERSION_BUILD=39
+GWENHYWFAR_VERSION_BUILD=40
 GWENHYWFAR_VERSION_TAG="cvs"
 GWENHYWFAR_VERSION_FULL_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL.$GWENHYWFAR_VERSION_BUILD($GWENHYWFAR_VERSION_TAG)"
 GWENHYWFAR_VERSION_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL($GWENHYWFAR_VERSION_TAG)"
@@ -131,7 +130,8 @@ case "$OS_TYPE" in
     	;;
     windows)
         AC_DEFINE_UNQUOTED(BUILDING_GWEN_DLL,1, [Define if DLL is built])
-        gwenhywfar_libs="-L/c/windows -lgwenhywfar32"
+        AQ_WINDOZE
+        gwenhywfar_libs="-L$(WIN_PATH_WINDOWS_MINGW) -lgwenhywfar32"
         gwenhywfar_includes="-I`eval echo $prefix/include`"
         gwenhywfar_sections=""
         gwenhywfar_os_lib="os/windows/libos.la"
